@@ -11,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class MauSacService implements IMauSacService {
@@ -25,7 +24,7 @@ public class MauSacService implements IMauSacService {
             list.sort(Comparator.comparing(MauSac::getNgayTao));
         }
         if (keyWord != null) {
-            list = list.stream().filter(x -> x.getTenMau().toLowerCase().toLowerCase().contains(keyWord.toLowerCase())).collect(Collectors.toList());
+            list = list.stream().filter(x -> x.getTenMau().toLowerCase().toLowerCase().contains(keyWord.toLowerCase())).toList();
         }
         return new Page<MauSacDTO>(MauSacDTO.fromCollection(list), page, pageSize);
     }
